@@ -1,1 +1,1 @@
-MODELS		= small medium large
+MODELS = small medium large model-mcs51-stack-auto
