@@ -1,3 +1,8 @@
+2005-11-25 Borut Razem <borut.razem AT siol.net>
+
+	* sdcc/device/lib/Makefile.in, sdcc/device/lib/incl.mk:
+	  added creation of model-mcs51-stack-auto libraries
+
 2005-11-24 Bernhard Held <bernhard AT bernhardheld.de>
 
 	* src/SDCCsymt.c (copyLinkChain): fixed bug 770487, copy structdef
